Matrix multiplication bonus

--- a/mlab/w1d2_resnet_new.ipynb
+++ b/mlab/w1d2_resnet_new.ipynb
@@ -11,40 +11,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "tgeFbGbAczWr"
       },
       "outputs": [],
       "source": [
         "# Only execute on Colab\n",
-        "%%capture\n",
-        "!git clone --depth 1 https://github.com/EffiSciencesResearch/ML4G.git\n",
-        "!cd ML4G\n",
-        "!pip install -r /content/ML4G/requirements.txt --quiet"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MegBsN9CeJFs",
-        "outputId": "e8486de6-dc71-417f-dbfa-31b2bc4f4f3f"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "/content/ML4G/mlab\n"
-          ]
-        }
-      ],
-      "source": [
-        "%cd /content/ML4G/mlab"
+        "try:\n",
+        "  import google.colab\n",
+        "  IN_COLAB = True\n",
+        "except:\n",
+        "  IN_COLAB = False\n",
+        "\n",
+        "if IN_COLAB:\n",
+        "    !git clone --depth 1 https://github.com/EffiSciencesResearch/ML4G.git\n",
+        "    !cd ML4G\n",
+        "    !pip install -r /content/ML4G/requirements.txt --quiet\n",
+        "    %cd /content/ML4G/mlab"
       ]
     },
     {
@@ -342,7 +326,7 @@
         "\n",
         "processed: t.Tensor = preprocess(images[0])  # type: ignore\n",
         "if not IS_CI:\n",
-        "    plt.imshow(rearrange(processed, \"c h w -> h w c\"))\n"
+        "    plt.imshow(rearrange(processed, \"c h w -> h w c\"))"
       ]
     },
     {
@@ -398,7 +382,7 @@
       "outputs": [],
       "source": [
         "with open(\"w1d2_imagenet_labels.json\") as f:\n",
-        "    imagenet_labels = list(json.load(f).values())\n"
+        "    imagenet_labels = list(json.load(f).values())"
       ]
     },
     {
@@ -468,7 +452,6 @@
         }
       ],
       "source": [
-        "\n",
         "def predict(model, images: List[Image.Image], print_topk_preds=3) -> List[int]:\n",
         "    \"\"\"\n",
         "    Pass the images through the model and print out the top predictions.\n",
@@ -487,8 +470,7 @@
         "if MAIN and (not IS_CI):\n",
         "    model = models.resnet34(weights=\"DEFAULT\")\n",
         "    pretrained_categories = predict(model, images)\n",
-        "    print(pretrained_categories)\n",
-        "\n"
+        "    print(pretrained_categories)"
       ]
     },
     {
@@ -539,8 +521,7 @@
         "if MAIN:\n",
         "    w1d2_test.test_trace(as_strided_trace)\n",
         "    w1d2_test.test_trace_transpose(as_strided_trace)\n",
-        "    w1d2_test.test_trace_expand(as_strided_trace)\n",
-        "\n"
+        "    w1d2_test.test_trace_expand(as_strided_trace)"
       ]
     },
     {
@@ -550,7 +531,7 @@
       },
       "source": [
         "\n",
-        "### Matrix Multiplication\n",
+        "### (Bonus) Matrix Multiplication\n",
         "\n",
         "Implement the following functions.\n",
         "\n",
@@ -631,8 +612,7 @@
         "    w1d2_test.test_matmul(as_strided_matmul)\n",
         "    w1d2_test.test_matmul_transpose(as_strided_matmul)\n",
         "    w1d2_test.test_matmul_expand(as_strided_matmul)\n",
-        "    w1d2_test.test_matmul_skip(as_strided_matmul)\n",
-        "\n"
+        "    w1d2_test.test_matmul_skip(as_strided_matmul)"
       ]
     },
     {
@@ -885,7 +865,7 @@
         "\n",
         "if MAIN:\n",
         "    w1d2_test.test_conv2d_minimal(conv2d_minimal, t.float64, 1e-10)\n",
-        "    w1d2_test.test_conv2d_minimal(conv2d_minimal, t.float32, 0.001)\n"
+        "    w1d2_test.test_conv2d_minimal(conv2d_minimal, t.float32, 0.001)"
       ]
     },
     {
@@ -938,7 +918,7 @@
         "\n",
         "if MAIN:\n",
         "    w1d2_test.test_pad2d(pad2d)\n",
-        "    w1d2_test.test_pad2d_multi_channel(pad2d)\n"
+        "    w1d2_test.test_pad2d_multi_channel(pad2d)"
       ]
     },
     {
@@ -991,10 +971,7 @@
         "\n",
         "\n",
         "if MAIN:\n",
-        "    w1d2_test.test_conv1d(conv1d)\n",
-        "\n",
-        "\n",
-        "\n"
+        "    w1d2_test.test_conv1d(conv1d)"
       ]
     },
     {
@@ -1030,7 +1007,7 @@
         "        return (int(v[0]), int(v[1]))\n",
         "    elif isinstance(v, int):\n",
         "        return (v, v)\n",
-        "    raise ValueError(v)\n"
+        "    raise ValueError(v)"
       ]
     },
     {
@@ -1067,7 +1044,7 @@
         "\n",
         "if MAIN:\n",
         "    w1d2_test.test_conv2d(conv2d, t.float64, 1e-10)\n",
-        "    w1d2_test.test_conv2d(conv2d, t.float32, 0.001)\n"
+        "    w1d2_test.test_conv2d(conv2d, t.float32, 0.001)"
       ]
     },
     {
@@ -1186,7 +1163,7 @@
         "if MAIN:\n",
         "    w1d2_test.test_maxpool2d_module(MaxPool2d)\n",
         "    m = MaxPool2d(3, stride=2, padding=1)\n",
-        "    print(f\"Manually verify that this is an informative repr: {m}\")\n"
+        "    print(f\"Manually verify that this is an informative repr: {m}\")"
       ]
     },
     {
@@ -1268,7 +1245,7 @@
         "if MAIN:\n",
         "    w1d2_test.test_linear_forward(Linear)\n",
         "    w1d2_test.test_linear_parameters(Linear)\n",
-        "    w1d2_test.test_linear_no_bias(Linear)\n"
+        "    w1d2_test.test_linear_no_bias(Linear)"
       ]
     },
     {
@@ -1314,7 +1291,7 @@
         "\n",
         "if MAIN:\n",
         "    print(f\"Manually verify that this is a useful looking repr: {Conv2d(1, 2, (3, 4), padding=5)}\")\n",
-        "    w1d2_test.test_conv2d_module(Conv2d)\n"
+        "    w1d2_test.test_conv2d_module(Conv2d)"
       ]
     },
     {
