--- a/mlab/w1d4_part1_new.ipynb
+++ b/mlab/w1d4_part1_new.ipynb
@@ -1,28 +1,15 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "\n",
-        "<a href=\"https://colab.research.google.com/github/EffiSciencesResearch/ML4G/blob/main/mlab/w1d4_part1_new\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ],
       "metadata": {
         "id": "dZrF8pXLTy9J"
-      }
+      },
+      "source": [
+        "\n",
+        "<a href=\"https://colab.research.google.com/github/EffiSciencesResearch/ML4G/blob/main/mlab/w1d4_part1_new.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
     },
     {
       "cell_type": "code",
@@ -48,6 +35,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "tZbgsexNBM3f"
+      },
       "source": [
         "\n",
         "# W1D4 Part 1 - Optimization\n",
@@ -164,13 +154,27 @@
         "### Stopping gradients with `torch.no_grad` or `torch.inference_mode`\n",
         "\n",
         "You may not want PyTorch to track gradients for some computations despite involving tensors with `requires_grad=True`. In this case, you can wrap the computation in the `with torch.inference_mode()` context to prevent this tracking. Example:\n"
-      ],
-      "metadata": {
-        "id": "tZbgsexNBM3f"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "leD-0LteBNQ2",
+        "outputId": "2e414a01-b7f1-4f48-93fd-07cdeb6e5d1f"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "y requires grad: True; z requires grad: False\n"
+          ]
+        }
+      ],
       "source": [
         "from typing import Iterable, Union, Optional, List, Tuple\n",
         "import matplotlib.pyplot as plt\n",
@@ -192,27 +196,13 @@
         "    with t.inference_mode():\n",
         "        z = x * x\n",
         "    print(f\"y requires grad: {y.requires_grad}; z requires grad: {z.requires_grad}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "leD-0LteBNQ2",
-        "outputId": "2e414a01-b7f1-4f48-93fd-07cdeb6e5d1f"
-      },
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "y requires grad: True; z requires grad: False\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "AtdsUUxLMQpB"
+      },
       "source": [
         "\n",
         "Result: `y requires grad: True; z requires grad: False`\n",
@@ -242,13 +232,15 @@
         "### The \"device\" variable\n",
         "\n",
         "A useful idiom when writing code to run on both CPU and GPU is to declare a `device` variable at the top of your notebook and then use it later on when creating or moving tensors. We've done this for you today.\n"
-      ],
-      "metadata": {
-        "id": "AtdsUUxLMQpB"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "X4fP9KV-MR6B"
+      },
+      "outputs": [],
       "source": [
         "device = t.device(\"cuda\" if t.cuda.is_available() else \"cpu\")\n",
         "if MAIN:\n",
@@ -265,25 +257,25 @@
         "\n",
         "if MAIN:\n",
         "    w1d4_part1_test.test_mlp(ImageMemorizer)"
-      ],
-      "metadata": {
-        "id": "X4fP9KV-MR6B"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "U4ZfQBiXNMKg"
+      },
       "source": [
         "Choose a picture and save it on the filesystem, or use the provided image. If your chosen image is much larger than 1 million pixels, crop it with `img.crop((left, top, right, bottom))` and/or resize it with `img.resize((width, height))`.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "U4ZfQBiXNMKg"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "fLZFLNTINKdS"
+      },
+      "outputs": [],
       "source": [
         "if MAIN:\n",
         "    fname = \"./w1d4_vangogh.jpg\"\n",
@@ -291,15 +283,13 @@
         "    print(f\"Image size in pixels: {img.size[0]} x {img.size[1]} = {img.size[0] * img.size[1]}\")\n",
         "    plt.imshow(img)\n",
         "    pass"
-      ],
-      "metadata": {
-        "id": "fLZFLNTINKdS"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Xb2Ags0kMS-6"
+      },
       "source": [
         "\n",
         "## Build Your Own TensorDataset\n",
@@ -311,13 +301,15 @@
         "### Slice Objects in Python\n",
         "\n",
         "`slice` is a built-in type containing `start`, `stop`, and `step` fields which can be integers or `None`. Given `x=[1,2,3,4,5,6,7]`, writing `x[1:5:2]` is syntactic sugar for `x[slice(1, 5, 2)]`.\n"
-      ],
-      "metadata": {
-        "id": "Xb2Ags0kMS-6"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Ins_8X01MZRB"
+      },
+      "outputs": [],
       "source": [
         "class TensorDataset:\n",
         "    def __init__(self, *tensors: t.Tensor):\n",
@@ -335,15 +327,13 @@
         "\n",
         "if MAIN:\n",
         "    w1d4_part1_test.test_tensor_dataset(TensorDataset)"
-      ],
-      "metadata": {
-        "id": "Ins_8X01MZRB"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "uaT_7IHAMaRa"
+      },
       "source": [
         "\n",
         "## Data Preprocessing\n",
@@ -359,13 +349,15 @@
         "- Return the inputs and labels wrapped in a `TensorDataset`.\n",
         "\n",
         "Execute the following cell, and make sure you understand what is happening:\n"
-      ],
-      "metadata": {
-        "id": "uaT_7IHAMaRa"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "eLnf-r7DMbG6"
+      },
+      "outputs": [],
       "source": [
         "def all_coordinates_scaled(height: int, width: int) -> t.Tensor:\n",
         "    \"\"\"Return a tensor of shape (height*width, 2) where each row is a (x, y) coordinate.\n",
@@ -389,15 +381,13 @@
         "    X = all_coordinates_scaled(height, width)\n",
         "    labels = rearrange(img_t, \"c h w -> (h w) c\") * 2.0 - 1.0\n",
         "    return TensorDataset(X, labels)\n"
-      ],
-      "metadata": {
-        "id": "eLnf-r7DMbG6"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "qhqY7KktMb9X"
+      },
       "source": [
         "\n",
         "### Train-Test Split\n",
@@ -411,13 +401,15 @@
         "For example, ImageNet has around 1.3 million training images and only 50K validation images. The percentage (under 4%) is irrelevant and what matters is that 50K is large enough in absolute terms to achieve some standard error of the mean. Implement `train_test_split` below to split the dataset as described.\n",
         "\n",
         "Hint: use [`torch.randperm`](https://pytorch.org/docs/stable/generated/torch.randperm.html).\n"
-      ],
-      "metadata": {
-        "id": "qhqY7KktMb9X"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "4SwL-5xrMc2B"
+      },
+      "outputs": [],
       "source": [
         "def train_test_split(all_data: TensorDataset, train_frac=0.8, val_frac=0.01, test_frac=0.01) -> List[TensorDataset]:\n",
         "    \"\"\"Return [train, val, test] datasets containing the specified fraction of examples.\n",
@@ -431,15 +423,13 @@
         "    all_data = preprocess_image(img)\n",
         "    (train_data, val_data, test_data) = train_test_split(all_data)\n",
         "    print(f\"Dataset sizes: train {len(train_data)}, val {len(val_data)} test {len(test_data)}\")\n"
-      ],
-      "metadata": {
-        "id": "4SwL-5xrMc2B"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "1iEhny7HMdp6"
+      },
       "source": [
         "\n",
         "### Visualizing the Training Data\n",
@@ -449,13 +439,15 @@
         "We make a zero tensor of shape `(height, width, 3)` representing the grid of pixels, that we display with `plt.imshow`.\n",
         "\n",
         "Just execute the following cell:\n"
-      ],
-      "metadata": {
-        "id": "1iEhny7HMdp6"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "9v3pR4a6MegY"
+      },
+      "outputs": [],
       "source": [
         "def to_grid(X: t.Tensor, Y: t.Tensor, width: int, height: int) -> t.Tensor:\n",
         "    \"\"\"Convert preprocessed data from the format used in the Dataset back to an image tensor.\n",
@@ -479,15 +471,13 @@
         "    X, Y = train_data.tensors\n",
         "    plt.figure()\n",
         "    plt.imshow(to_grid(X, Y, width, height))"
-      ],
-      "metadata": {
-        "id": "9v3pR4a6MegY"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "uep2eUdhMfhZ"
+      },
       "source": [
         "\n",
         "## DataLoaders\n",
@@ -508,27 +498,27 @@
         "In practice, SGD is relatively insensitive to whether you shuffle on every epoch, just once, or even sample each minibatch with replacement from the full dataset. For some theory behind this, see [this paper](https://arxiv.org/pdf/2106.06880.pdf).\n",
         "\n",
         "</details>\n"
-      ],
-      "metadata": {
-        "id": "uep2eUdhMfhZ"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "fVpFUyn8MgWn"
+      },
+      "outputs": [],
       "source": [
         "if MAIN:\n",
         "    train_loader = DataLoader(train_data, batch_size=256, shuffle=True)\n",
         "    val_loader = DataLoader(val_data, batch_size=256)\n",
         "    test_loader = DataLoader(test_data, batch_size=256)"
-      ],
-      "metadata": {
-        "id": "fVpFUyn8MgWn"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "BeZD0nM6Mh5y"
+      },
       "source": [
         "\n",
         "Implement the `train_one_epoch` function below.\n",
@@ -545,13 +535,15 @@
         "- Are you calling `backward()` on the mean loss over the batch items? Note that if you don't use the mean, the magnitude of the gradients scales up linearly with the batch size, which is not what you want.\n",
         "\n",
         "</details>\n"
-      ],
-      "metadata": {
-        "id": "BeZD0nM6Mh5y"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "KNJow6GuMi1L"
+      },
+      "outputs": [],
       "source": [
         "def train_one_epoch(model: ImageMemorizer, dataloader: DataLoader) -> float:\n",
         "    \"\"\"Show each example in the dataloader to the model once.\n",
@@ -582,27 +574,27 @@
         "\n",
         "if MAIN:\n",
         "    w1d4_part1_test.test_evaluate(evaluate)"
-      ],
-      "metadata": {
-        "id": "KNJow6GuMi1L"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "_gbo8h4BMjq5"
+      },
       "source": [
         "\n",
         "The following cell creates a model with 400 neurons in each hidden layer and trains it for an epoch.\n",
         "\n",
         "If no errors appeared, do a few more epochs and plot the training loss and validation loss over time as a function of number of epochs. Compute the validation loss using your `evaluate` function. I was able to reach a validation loss below 0.2 after 40 epochs. Your image might be easier or harder to learn.\n"
-      ],
-      "metadata": {
-        "id": "_gbo8h4BMjq5"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "nwTqEyTPMkjC"
+      },
+      "outputs": [],
       "source": [
         "if MAIN:\n",
         "    model = ImageMemorizer(2, 400, 3)\n",
@@ -623,26 +615,26 @@
         "    ax.plot(val_losses, label=\"Validation loss\")\n",
         "    ax.set(xlabel=\"Epochs\", ylabel=\"L1 Loss\")\n",
         "    fig.legend()"
-      ],
-      "metadata": {
-        "id": "nwTqEyTPMkjC"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "BmLlpGzAMljt"
+      },
       "source": [
         "\n",
         "\n",
         "Finally, execute this cell to display the image your network has memorized:\n"
-      ],
-      "metadata": {
-        "id": "BmLlpGzAMljt"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "lVY5wOklMmdZ"
+      },
+      "outputs": [],
       "source": [
         "if MAIN:\n",
         "    X = all_coordinates_scaled(height, width)\n",
@@ -657,15 +649,13 @@
         "\n",
         "    # ax.set_position([0, 0, 1, 1])\n",
         "    # fig.savefig(\"w1d4_vangogh_solution.jpg\")"
-      ],
-      "metadata": {
-        "id": "lVY5wOklMmdZ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "UbwpxnGhMngU"
+      },
       "source": [
         "\n",
         "Share your image with your friends if you like it! Here's the one my network learned:\n",
@@ -694,13 +684,15 @@
         "For each dimension, use `torch.linspace` to generate evenly spaced values, then `einops.repeat`.\n",
         "\n",
         "</details>\n"
-      ],
-      "metadata": {
-        "id": "UbwpxnGhMngU"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "TZsZtTB0Momi"
+      },
+      "outputs": [],
       "source": [
         "def rosenbrocks_banana(x: t.Tensor, y: t.Tensor, a=1, b=100) -> t.Tensor:\n",
         "    return (a - x) ** 2 + b * (y - x**2) ** 2 + 1\n",
@@ -727,15 +719,13 @@
         "if MAIN:\n",
         "    plot_rosenbrock()\n",
         "    fig = plot_rosenbrock(log_scale=True)"
-      ],
-      "metadata": {
-        "id": "TZsZtTB0Momi"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "bThJXfzKMpad"
+      },
       "source": [
         "\n",
         "# Optimize The Banana\n",
@@ -759,13 +749,15 @@
         "All you need to do to convince PyTorch you're a responsible adult is to call `detach()` on the tensor first, which returns a view that does not require grad and isn't part of the computation graph.\n",
         "\n",
         "</details>\n"
-      ],
-      "metadata": {
-        "id": "bThJXfzKMpad"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "OA08_PkSMqOl"
+      },
+      "outputs": [],
       "source": [
         "def opt_banana(xy: t.Tensor, n_iters: int, lr=0.001, momentum=0.98):\n",
         "    \"\"\"Optimize the banana starting from the specified point.\n",
@@ -784,15 +776,13 @@
         "    xys = opt_banana(xy, n_iters=100).numpy()\n",
         "    fig = plot_rosenbrock(log_scale=True)\n",
         "    fig.axes[0].plot(xys[:, 0], xys[:, 1], color=\"r\", linewidth=1)\n"
-      ],
-      "metadata": {
-        "id": "OA08_PkSMqOl"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "v4Eh2ij1MrDb"
+      },
       "source": [
         "\n",
         "## Build Your Own Optimizers\n",
@@ -831,13 +821,15 @@
         "Tip: It is possible to not use if conditions in sgd and Adam. This simplifies the code.\n",
         "\n",
         "### SGD\n"
-      ],
-      "metadata": {
-        "id": "v4Eh2ij1MrDb"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ETUIC33SMsPi"
+      },
+      "outputs": [],
       "source": [
         "class SGD:\n",
         "    def __init__(self, params: Iterable[t.nn.parameter.Parameter], lr: float, momentum: float, weight_decay: float):\n",
@@ -858,25 +850,25 @@
         "\n",
         "if MAIN:\n",
         "    w1d4_part1_test.test_sgd(SGD)"
-      ],
-      "metadata": {
-        "id": "ETUIC33SMsPi"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "kaF8bVdaMtEc"
+      },
       "source": [
         "\n",
         "### Adam\n"
-      ],
-      "metadata": {
-        "id": "kaF8bVdaMtEc"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "YtwzqBuvMuC8"
+      },
+      "outputs": [],
       "source": [
         "class Adam:\n",
         "    def __init__(\n",
@@ -903,12 +895,21 @@
         "\n",
         "if MAIN:\n",
         "    w1d4_part1_test.test_adam(Adam)"
-      ],
-      "metadata": {
-        "id": "YtwzqBuvMuC8"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
