--- a/mlab/w1d4_part1_new.ipynb
+++ b/mlab/w1d4_part1_new.ipynb
@@ -903,11 +903,18 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "ML4GS",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.9.16 (main, Jan 11 2023, 10:02:19) \n[Clang 14.0.6 ]"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "2976a061e207041c5ea034acf520ab7eefe3f1128fd85ff62a2d139d31ccd0fd"
+      }
     }
   },
   "nbformat": 4,
