--- a/days/w1d3/transformers.ipynb
+++ b/days/w1d3/transformers.ipynb
@@ -159,10 +159,10 @@
         "\n",
         "        # Attention weights of the different heads are stored in the same tensors.\n",
         "\n",
-        "        # WARNING: We put all the attention heads in the same Linears Layers:\n",
-        "        self.values = nn.Linear(self.embed_size, self.embed_size, bias=False)\n",
-        "        self.keys = nn.Linear(self.embed_size, self.embed_size, bias=False)\n",
-        "        self.queries = nn.Linear(self.embed_size, self.embed_size, bias=False)\n",
+        "        # WARNING: We put all the attention heads in the same Linear Layers:\n",
+        "        self.values = nn.Linear(self.embed_size, heads * self.head_dim, bias=False)\n",
+        "        self.keys = nn.Linear(self.embed_size, heads * self.head_dim, bias=False)\n",
+        "        self.queries = nn.Linear(self.embed_size, heads * self.head_dim, bias=False)\n",
         "\n",
         "        # fc_out after having concatenated the results of the attention of each head\n",
         "        self.fc_out = nn.Linear(self.embed_size, embed_size)\n",
@@ -255,11 +255,7 @@
         "        queries = self.queries(pre_queries)  # (N, query_len, embed_size)\n",
         "        # WARNING: values (resp. keys and queries), are then used by different heads. \n",
         "        # Each head uses a fraction of the values (resp. keys and queries) tensor.\n",
-        "\n",
-        "        # Compute the values keys and queries\n",
-        "        values = self.values(pre_values)\n",
-        "        ...\n",
-        "        ...\n",
+        "        \n",
         "\n",
         "        # Split the embedding into self.heads different pieces\n",
         "        values = values.reshape(N, value_len, self.heads, self.head_dim)\n",
@@ -860,7 +856,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
+      "version": "3.9.13 (main, Oct 13 2022, 16:12:19) \n[Clang 12.0.0 ]"
     },
     "vscode": {
       "interpreter": {
