--- a/mlab/w3d2_part2_dqn_new.ipynb
+++ b/mlab/w3d2_part2_dqn_new.ipynb
@@ -478,6 +478,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "vZrz861tE3Ak"
@@ -486,7 +487,7 @@
         "\n",
         "## Probe Environments\n",
         "\n",
-        "Extremely simple probe environments are a great way to debug your algorithm. Implement the first probe environment below.\n"
+        "Extremely simple probe environments are a great way to debug your algorithm. Implement the second probe environment below by looking at the first probe.\n"
       ]
     },
     {
@@ -511,15 +512,23 @@
         "    observation_space: Box\n",
         "\n",
         "    def __init__(self):\n",
-        "        pass\n",
+        "        \"SOLUTION\"\n",
+        "        super().__init__()\n",
+        "        self.observation_space = Box(np.array([0]), np.array([0]))\n",
+        "        self.action_space = Discrete(1)\n",
+        "        self.reset()\n",
         "\n",
         "    def step(self, action: ActType) -> Tuple[ObsType, float, bool, dict]:\n",
-        "        pass\n",
+        "        \"SOLUTION\"\n",
+        "        return np.array([0]), 1.0, True, {}\n",
         "\n",
         "    def reset(\n",
         "        self, seed: Optional[int] = None, return_info=False, options=None\n",
         "    ) -> Union[ObsType, Tuple[ObsType, dict]]:\n",
-        "        pass\n",
+        "        \"SOLUTION\"\n",
+        "        if return_info:\n",
+        "            return np.array([0.0]), {}\n",
+        "        return np.array([0.0])\n",
         "\n",
         "\n",
         "gym.envs.registration.register(id=\"Probe1-v0\", entry_point=Probe1)\n",
@@ -864,11 +873,18 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "ML4GS",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.9.16 (main, Jan 11 2023, 10:02:19) \n[Clang 14.0.6 ]"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "2976a061e207041c5ea034acf520ab7eefe3f1128fd85ff62a2d139d31ccd0fd"
+      }
     }
   },
   "nbformat": 4,
