--- a/mlab/w3d2_part2_dqn_new.ipynb
+++ b/mlab/w3d2_part2_dqn_new.ipynb
@@ -655,6 +655,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "l70eTk0aE8T0"
