--- a/days/w1d4/gradCam/Grad_CAM_hard_mode_colab.ipynb
+++ b/days/w1d4/gradCam/Grad_CAM_hard_mode_colab.ipynb
@@ -10,6 +10,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "1iAUh866zzuq"
@@ -20,7 +21,9 @@
         "\n",
         "* **To be submitted**: this notebook in two weeks, **cleaned** (i.e. without results, for file size reasons: `menu > kernel > restart and clean`), in a state ready to be executed (if one just presses 'Enter' till the end, one should obtain all the results for all images) with a few comments at the end. No additional report, just the notebook!\n",
         "\n",
-        "* NB: if `PIL` is not installed, try `conda install pillow`.\n"
+        "* NB: if `PIL` is not installed, try `conda install pillow`.\n",
+        "\n",
+        "* Make sure you are using the CPU mode in colab, otherwise, you will have some problems. This is important.\n"
       ]
     },
     {
@@ -69,7 +72,7 @@
         "# Download necessary files\n",
         "%cd /content\n",
         "! wget --load-cookies /tmp/cookies.txt \"https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=1TtuK5ZFDcnkK5qvF-ZBuY3PmAots6e7c' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\\1\\n/p')&id=1TtuK5ZFDcnkK5qvF-ZBuY3PmAots6e7c\" -O gradCam.zip && rm -rf /tmp/cookies.txt\n",
-        "!unzip gradCam.zip"
+        "! unzip -o gradCam.zip "
       ]
     },
     {
@@ -942,11 +945,8 @@
       "provenance": []
     },
     "gpuClass": "standard",
-    "interpreter": {
-      "hash": "0e1c23db0fbed75fdc2c449bc2586185aea1cb9e55399a7c7962fa341cc34577"
-    },
     "kernelspec": {
-      "display_name": "Python 3.9.12 ('mlab')",
+      "display_name": "ML4GS",
       "language": "python",
       "name": "python3"
     },
@@ -960,7 +960,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.12"
+      "version": "3.9.16 (main, Jan 11 2023, 10:02:19) \n[Clang 14.0.6 ]"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "2976a061e207041c5ea034acf520ab7eefe3f1128fd85ff62a2d139d31ccd0fd"
+      }
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
