--- a/days/w1d4/gradCam/Grad_CAM_easy_mode_colab.ipynb
+++ b/days/w1d4/gradCam/Grad_CAM_easy_mode_colab.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -62,6 +63,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "XqHFe45-zzuu"
@@ -146,7 +148,8 @@
         "# load model\n",
         "%cd /content/gradCam\n",
         "from load_model import load_model\n",
-        "vqa_resnet = load_model()"
+        "vqa_resnet = load_model()\n",
+        "vqa_resnet.train()"
       ]
     },
     {
@@ -705,6 +708,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "HVBaurxWzzuv"
@@ -774,6 +778,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "b0hLEtdEzzux"
@@ -897,10 +902,13 @@
         "inputs = preprocess(dir_path, Question2)\n",
         "ans = vqa_resnet(*inputs) # use model to predict the answer\n",
         "answer_idx = np.argmax(F.softmax(ans, dim=1).data.cpu().numpy())\n",
-        "print(answer_words[answer_idx])"
+        "print(answer_words[answer_idx])\n",
+        "\n",
+        "\n"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "AMFraSC4zzuy"
@@ -922,6 +930,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "wMC04Dt0zzuy"
@@ -977,7 +986,7 @@
       ],
       "source": [
         "vqa_resnet.resnet_layer4.r_model.layer4[2].conv3.register_forward_hook(forward_hook)\n",
-        "vqa_resnet.resnet_layer4.r_model.layer4[2].conv3.register_backward_hook(backward_hook)"
+        "vqa_resnet.resnet_layer4.r_model.layer4[2].conv3.register_backward_hook(backward_hook)\n"
       ]
     },
     {
@@ -1076,6 +1085,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -1083,6 +1093,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": []
@@ -1110,7 +1121,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
+      "version": "3.9.16"
     },
     "vscode": {
       "interpreter": {
