--- a/days/w1d4/gradCam/Grad_CAM_hard_mode_colab.ipynb
+++ b/days/w1d4/gradCam/Grad_CAM_hard_mode_colab.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -49,6 +50,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "XqHFe45-zzuu"
@@ -133,7 +135,8 @@
         "# load model\n",
         "%cd /content/gradCam\n",
         "from load_model import load_model\n",
-        "vqa_resnet = load_model()"
+        "vqa_resnet = load_model()\n",
+        "vqa_resnet.train()"
       ]
     },
     {
@@ -692,6 +695,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "HVBaurxWzzuv"
@@ -761,6 +765,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "b0hLEtdEzzux"
@@ -888,6 +893,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "AMFraSC4zzuy"
@@ -909,6 +915,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "wMC04Dt0zzuy"
@@ -960,7 +967,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.16 (main, Jan 11 2023, 10:02:19) \n[Clang 14.0.6 ]"
+      "version": "3.9.16"
     },
     "vscode": {
       "interpreter": {
