--- a/days/w1d4/gradCam/Grad_CAM_easy_mode_colab.ipynb
+++ b/days/w1d4/gradCam/Grad_CAM_easy_mode_colab.ipynb
@@ -1025,7 +1025,7 @@
         "\n",
         "    Relu = torch.nn.ReLU()\n",
         "    grad_cam = Relu(grad_cam)\n",
-        "    grad_cam = grad_cam.detach().numpy()\n",
+        "    grad_cam = grad_cam.cpu().detach().numpy()\n",
         "\n",
         "    cam = cv2.resize(grad_cam, (224, 224))\n",
         "    cam = np.maximum(cam, 0)\n",
