--- a/days/w1d4/gradCam/Grad_CAM_hard_mode_colab.ipynb
+++ b/days/w1d4/gradCam/Grad_CAM_hard_mode_colab.ipynb
@@ -669,6 +669,22 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Dropout of 0.5 is too big, for deterministic behavior, remove the dropout\n",
+        "import torch.nn as nn\n",
+        "\n",
+        "# Loop through all the modules in the model\n",
+        "for module in vqa_resnet.modules():\n",
+        "    if isinstance(module, nn.Dropout):\n",
+        "        # Update the dropout probability for each dropout layer\n",
+        "        module.p = 0"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 23,
       "metadata": {
         "id": "s1luAgF_zzuv"
