--- a/days/w1d6/gpt-2_interpretability.ipynb
+++ b/days/w1d6/gpt-2_interpretability.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "rcxdkt2qE6mn"
@@ -10,6 +11,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "D5ZjQo89E6mq"
@@ -19,6 +21,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "v3j1zYbHE6mr"
@@ -129,7 +132,11 @@
       },
       "outputs": [],
       "source": [
-        "..."
+        "from typing import List\n",
+        "\n",
+        "def to_tensor(list_tensor : List[torch.Tensor]) -> torch.Tensor:\n",
+        "    list_tensor = [t.detach() for t in list_tensor]\n",
+        "    return torch.concat(list_tensor, dim=0)"
       ]
     },
     {
@@ -160,9 +167,9 @@
       "source": [
         "from transformer_utils.logit_lens.plotting import _plot_logit_lens\n",
         "_plot_logit_lens(\n",
-        "    to_tensor(layer_logits),\n",
-        "    to_tensor(layer_preds),\n",
-        "    to_tensor(layer_probs),\n",
+        "    to_tensor(layer_logits), # layer_logits = List of 12 tensors of shape (1, 8, 50257)\n",
+        "    to_tensor(layer_preds), # layer_preds = List of 12 tensors of shape (1, 8), which are the argmax of the layer_logits\n",
+        "    to_tensor(layer_probs), # layer_probs = Same shape as layer logit but after computing the softmax\n",
         "    tokenizer,\n",
         "    input_ids=input_ids,\n",
         "    start_ix=0,\n",
@@ -175,6 +182,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "xLAbUztFPNQk"
@@ -340,6 +348,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "rSrtT-2afHIt"
@@ -437,6 +446,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "eJxcA9K_UWHK"
@@ -446,6 +456,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "dg9gsQPeUf_G"
