--- a/days/w1d6/gpt-2_interpretability.ipynb
+++ b/days/w1d6/gpt-2_interpretability.ipynb
@@ -86,6 +86,8 @@
       },
       "outputs": [],
       "source": [
+        "# Warning: the final layer norm should be used before computing the softmax\n",
+        "# Tip: Its impossible to remove a hook unless you create the hook with a handle by following those steps: https://pytorch.org/docs/stable/generated/torch.Tensor.register_hook.html\n",
         "..."
       ]
     },
@@ -137,6 +139,17 @@
         "def to_tensor(list_tensor : List[torch.Tensor]) -> torch.Tensor:\n",
         "    list_tensor = [t.detach() for t in list_tensor]\n",
         "    return torch.concat(list_tensor, dim=0)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# layer_logits is a list of 12 tensors each of shape (1, 8, 50257) (batch, tokens, vocab)\n",
+        "to_tensor(layer_logits).shape \n",
+        "# torch.Size([12, 8, 50257])"
       ]
     },
     {
