--- a/days/w1d6/gpt-2_interpretability.ipynb
+++ b/days/w1d6/gpt-2_interpretability.ipynb
@@ -75,7 +75,12 @@
         "\n",
         "# Tip: Use torch hooks, and do not forget the last layerNorm layer!\n",
         "# Hooks documentation: https://pytorch.org/tutorials/beginner/former_torchies/nnft_tutorial.html#forward-and-backward-function-hooks\n",
-        "# Example of usage of hooks here: https://github.com/EffiSciencesResearch/ML4G/blob/main/days/w1d4/gradCam/Grad_CAM_easy_mode.ipynb"
+        "# Example of usage of hooks here: https://github.com/EffiSciencesResearch/ML4G/blob/main/days/w1d4/gradCam/Grad_CAM_easy_mode.ipynb\n",
+        "# Tip: It is impossible to remove a hook unless you create the hook with a handle by following those steps: https://pytorch.org/docs/stable/generated/torch.Tensor.register_hook.html \n",
+        "\n",
+        "\n",
+        "# You can print the model to see the name of the different layers\n",
+        "model "
       ]
     },
     {
@@ -87,8 +92,7 @@
       "outputs": [],
       "source": [
         "# Warning: the final layer norm should be used before computing the softmax\n",
-        "# Tip: Its impossible to remove a hook unless you create the hook with a handle by following those steps: https://pytorch.org/docs/stable/generated/torch.Tensor.register_hook.html\n",
-        "..."
+        "ln_f = model.base_model.ln_f"
       ]
     },
     {
