--- a/days/w1d6/gpt-2_interpretability.ipynb
+++ b/days/w1d6/gpt-2_interpretability.ipynb
@@ -32,6 +32,7 @@
         "Read : https://www.lesswrong.com/posts/AcKRB8wDpdaN6v6ru/interpreting-gpt-the-logit-lens\n",
         "\n",
         "Then try to reimplement it in a minimal way by reproducing the figure at the end of this section.\n",
+        "This exercice is quite unguided because being able to use the transformer library autonomously is very important\n",
         "\n",
         "\n",
         "Resources:\n",
@@ -185,7 +186,7 @@
         "from transformer_utils.logit_lens.plotting import _plot_logit_lens\n",
         "_plot_logit_lens(\n",
         "    to_tensor(layer_logits), # layer_logits = List of 12 tensors of shape (1, 8, 50257)\n",
-        "    to_tensor(layer_preds), # layer_preds = List of 12 tensors of shape (1, 8), which are the argmax of the layer_logits\n",
+        "    to_tensor(layer_preds), # layer_preds = List of 12 tensors of shape (1, 8), layer_preds is the argmax of the layer_logits\n",
         "    to_tensor(layer_probs), # layer_probs = Same shape as layer logit but after computing the softmax\n",
         "    tokenizer,\n",
         "    input_ids=input_ids,\n",
