Add plots to check the exercice and some indications

--- a/days/w1d1/pytorch_tuto.ipynb
+++ b/days/w1d1/pytorch_tuto.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "2FWrcFTf3sAA"
@@ -24,12 +25,30 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "UpWDIuzG3sAJ"
       },
       "source": [
         "If you are not familiar with numpy, you can read this cheat sheet: https://www.datacamp.com/cheat-sheet/numpy-cheat-sheet-data-analysis-in-python"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "def plot(y_pred, y, x):\n",
+        "    plt.plot(x, y, label='y (actual)')\n",
+        "    plt.plot(x, y_pred, label='y_pred (predicted)')\n",
+        "    plt.xlabel('x')\n",
+        "    plt.ylabel('y')\n",
+        "    plt.legend()\n",
+        "    plt.show()"
       ]
     },
     {
@@ -89,14 +108,15 @@
         "    # y = a + b x + c x^2 + d x^3\n",
         "    y_pred = ...\n",
         "\n",
-        "    # (Optional) Compute and print loss (Mean squared Error)\n",
         "    # Computing the loss is not necessary in numpy\n",
         "    # But it will be necessary in Pytorch\n",
         "    loss = ...\n",
         "    if t % 100 == 99:\n",
         "        print(t, loss)\n",
         "\n",
-        "    # compute the gradients of the loss wrt a, b, c, d\n",
+        "    # compute the gradients of the loss (mean squared error loss) wrt a, b, c, d\n",
+        "    # Here we calculate the difference for each point and then calculate a gradient for each point.\n",
+        "    # Take a pen and paper!\n",
         "    # Warning: y_pred is a vector, and grad_a should be the mean gradient of each component of y_pred.\n",
         "    grad_a = ...\n",
         "    grad_b = ...\n",
@@ -114,6 +134,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "xg5fRGsu3sAY"
@@ -127,6 +148,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Check with the plot!\n",
+        "plot(y_pred, y, x)"
+      ]
+    },
+    {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "TR-pDuCY3sAb"
@@ -143,6 +175,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "bNPdCt1p3sAg"
@@ -152,6 +185,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "tr0332RW3sAq"
@@ -242,10 +276,12 @@
         "        c.grad = ...\n",
         "        d.grad = ...\n",
         "\n",
-        "print(f'Result: y = {a.item()} + {b.item()} x + {c.item()} x^2 + {d.item()} x^3')"
+        "print(f'Result: y = {a.item()} + {b.item()} x + {c.item()} x^2 + {d.item()} x^3')\n",
+        "# TODO: Use the the plot function to check your results!"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "FpqVQiEn3sAz"
@@ -333,6 +369,7 @@
         "    torch.nn.Linear(3, 1),\n",
         "    # Note: Flatten default arguments are Flatten(start_dim = 1, end_dim = -1)\n",
         "    # By default, start_dim = 1 because 0 corresponds to the batch dimension.\n",
+        "    # We use flatten because we want the final tensor to match the shape of y.\n",
         "    torch.nn.Flatten(start_dim=0, end_dim=1)\n",
         ")\n",
         "\n",
@@ -375,10 +412,14 @@
         "linear_layer = model[0]\n",
         "\n",
         "# For linear layer, its parameters are stored as `weight` and `bias`.\n",
-        "print(f'Result: y = {linear_layer.bias.item()} + {linear_layer.weight[:, 0].item()} x + {linear_layer.weight[:, 1].item()} x^2 + {linear_layer.weight[:, 2].item()} x^3')"
+        "print(f'Result: y = {linear_layer.bias.item()} + {linear_layer.weight[:, 0].item()} x + {linear_layer.weight[:, 1].item()} x^2 + {linear_layer.weight[:, 2].item()} x^3')\n",
+        "\n",
+        "\n",
+        "# TODO: Use the the plot function to check your results!"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "A5jbAeeQ3sA9"
@@ -406,6 +447,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "gSGr2kmD3sBD"
